--- a/css/common.css
+++ b/css/common.css
@@ -2,6 +2,10 @@
     box-sizing: border-box
 }
 
+main {
+    overflow: hidden;
+}
+
 blockquote {
     margin: 0;
     padding: 0
@@ -209,10 +213,6 @@ p {
 }
 
 
-p:last-of-type {
-    margin-bottom: 0;
-}
-
 img {
     max-width: 100%;
     height: auto
@@ -233,127 +233,6 @@ img {
     overflow: hidden
 }
 
-.mb-0 {
-    margin-bottom: 0 !important
-}
-
-.mb-10 {
-    margin-bottom: 10px !important
-}
-
-.mb-14 {
-    margin-bottom: 14px !important
-}
-
-.mb-15 {
-    margin-bottom: 15px !important
-}
-
-.mb-19 {
-    margin-bottom: 19px !important
-}
-
-.mb-22 {
-    margin-bottom: 22px !important
-}
-
-.mb-23 {
-    margin-bottom: 23px !important
-}
-
-.mb-24 {
-    margin-bottom: 24px !important
-}
-
-.mb-25 {
-    margin-bottom: 25px !important
-}
-
-.mb-27 {
-    margin-bottom: 27px !important
-}
-
-.mb-28 {
-    margin-bottom: 28px !important
-}
-
-.mb-29 {
-    margin-bottom: 29px !important
-}
-
-.mb-30 {
-    margin-bottom: 30px !important
-}
-
-.mb-34 {
-    margin-bottom: 34px !important
-}
-
-.mb-40 {
-    margin-bottom: 40px !important
-}
-
-.mb-45 {
-    margin-bottom: 45px !important
-}
-
-.mb-50 {
-    margin-bottom: 50px !important
-}
-
-.mb-57 {
-    margin-bottom: 57px !important
-}
-
-.mb-59 {
-    margin-bottom: 59px !important
-}
-
-.mb-60 {
-    margin-bottom: 60px !important
-}
-
-.mb-70 {
-    margin-bottom: 70px !important
-}
-
-.mb-80 {
-    margin-bottom: 80px !important
-}
-
-.mb-96 {
-    margin-bottom: 96px !important
-}
-
-.mb-100 {
-    margin-bottom: 100px !important
-}
-
-.mb-150 {
-    margin-bottom: 150px !important
-}
-
-.pb-0 {
-    padding-bottom: 0 !important
-}
-
-.pb-20 {
-    padding-bottom: 20px !important
-}
-
-.pb-100 {
-    padding-bottom: 100px !important
-}
-
-@media (min-width: 768px) {
-    .pt-160 {
-        padding-top: 160px !important
-    }
-}
-
-.p43-50 {
-    padding: 43px 50px !important
-}
 
 .lh-13 {
     line-height: 1.3 !important
@@ -408,7 +287,12 @@ ol span, ul span {
 
 .section {
     position: relative;
-    padding: 80px 0;
+    padding: 60px 0;
+}
+
+.section-background {
+    padding-bottom: 300px;
+    position: relative;
 }
 
 .section-white {
@@ -426,18 +310,32 @@ ol span, ul span {
     color: #092a5e;
     font-weight: 700;
     line-height: 38px;
-    margin-bottom: 30px
+    margin-bottom: 30px;
+}
+
+.regular-title {
+    font-size: 23px;
+    color: #092a5e;
+    font-weight: 400;
+    line-height: 1;
+    margin-bottom: 30px;
+    text-align: center;
+    display: block;
 }
 
 @media screen and (max-width: 999px) {
     .section-title {
-        scroll-margin-top: 92px
+        scroll-margin-top: 92px;
     }
 }
 
 @media (min-width: 1200px) {
     .section-title {
-        font-size: 30px
+        font-size: 30px;
+    }
+
+    .regular-title {
+        font-size: 28px;
     }
 }
 
@@ -724,7 +622,7 @@ ol, strong {
 
 .embed {
     text-align: center;
-    margin-top: 24px
+    margin-top: 30px
 }
 
 .embed-content {
@@ -787,7 +685,7 @@ ol, strong {
     }
 
     .embed-image-wrapper__image {
-        max-width: 200%
+        max-width: 200% !important;
     }
 }
 
@@ -799,6 +697,10 @@ ol, strong {
 @media (min-width: 768px) {
     .section-bottom {
         padding: 160px 0 200px;
+    }
+
+    .section {
+        padding: 80px 0;
     }
 }
 
@@ -857,4 +759,44 @@ ol, strong {
 
 .nav-footer--link:focus, .nav-footer--link:hover {
     color: #70cbf4
+}
+
+.swiper-button-next:after, .swiper-button-prev:after {
+    display: none;
+}
+
+.swiper-button-next, .swiper-button-prev {
+    width: 53px !important;
+    height: 53px !important;
+    transform: translateY(-50%) !important;
+    top: 383px !important;
+}
+
+.swiper-button-next img, .swiper-button-prev img {
+    transform: scale(1.1);
+}
+
+.swiper-button-next img {
+    transform: scale(1.1) rotate(180deg);
+}
+
+.swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
+    top: auto !important;
+    bottom: 0 !important;
+}
+
+.swiper-pagination-bullet {
+    height: 16px !important;
+    width: 16px !important;
+    background-color: #FFFFFF4D !important;
+}
+
+.swiper-pagination-bullet-active {
+    background-color: #FFFFFF !important;
+}
+
+.swiper-button-next.swiper-button-disabled, .swiper-button-prev.swiper-button-disabled {
+    opacity: 1 !important;
+    cursor: pointer !important;
+    pointer-events: auto !important;
 }
