--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,80 @@
     background-position: 70% 100%;
 }
 
+.advice-wrap {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-row-gap: 20px;
+    padding: 0 8px;
+}
+
+.advice-item {
+    text-align: center;
+}
+
+.advice-item-image {
+    margin-bottom: 17px;
+}
+
+.advice-item-title {
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 1.2;
+}
+
+.swiper {
+    width: 100%;
+    height: 756px;
+    padding-bottom: 36px !important;
+}
+
+.slider-wrapper {
+    padding: 0 25px;
+}
+
+.item-slider {
+    background-color: #ffffff;
+    border-radius: 10px;
+}
+
+.item-slider img, .item-slider picture {
+    border-radius: 10px 10px 0 0;
+    height: 100%;
+    object-fit: cover;
+}
+
+.item-slider-img {
+    height: 320px;
+}
+
+.item-slider-content {
+    padding: 30px 40px;
+    box-sizing: border-box;
+    display: inline-block;
+}
+
+.content-title {
+    margin-bottom: 20px;
+    font-size: 22px;
+    line-height: 24px;
+    font-weight: 700;
+}
+
+.content-text {
+    margin-bottom: 0;
+    letter-spacing: 0;
+    line-height: 1.33;
+}
+
 @media screen and (min-width: 768px) {
     .main-section {
         background-position: center center
+    }
+
+    .advice-wrap {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-row-gap: 0;
     }
 }
 
@@ -106,7 +177,148 @@ body.noWebp .main-section {
     margin-bottom: 21px
 }
 
+.detox-wrap {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+}
+
+.detox-item__img {
+    margin-bottom: 19px;
+}
+
+.detox-item {
+    background-color: #092A5E;
+    padding: 34px 16px;
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    border-radius: 6px;
+}
+
+.detox-list {
+    text-align: left;
+    list-style-type: disc;
+}
+
+.detox-item__title {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 1.2;
+    margin-bottom: 47px;
+
+    &.margin-mode {
+        margin-bottom: 20px;
+    }
+}
+
+
+.detox-list-item {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0;
+    margin-bottom: 30px;
+}
+
+.section-background {
+    padding-bottom: 300px;
+    position: relative;
+}
+
+.section-background:before {
+    content: '';
+    display: block;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 369px;
+    background-image: url(../images/wellen.svg);
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: cover;
+}
+
+.image-sea-wrapper {
+    margin: 0 0 40px -28px;
+}
+
+.place-block {
+    display: flex;
+    border-radius: 6px;
+    margin-bottom: 40px;
+    flex-direction: column;
+}
+
+.place-block-info {
+    width: 100%;
+    background-color: #ffffff;
+    padding: 25px 30px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 6px 6px 0 0;
+}
+
+.place-block-image picture, .place-block-image img {
+    border-radius: 0 0 6px 6px;
+    object-fit: cover;
+    height: 100%;
+}
+
+.info-item {
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+    line-height: 1;
+    letter-spacing: 0;
+    color: #092A5E;
+    margin-bottom: 16px;
+
+    &:last-of-type {
+        margin-bottom: 0;
+    }
+}
+
+.info-item span {
+    margin-left: 19px;
+    font-weight: 400;
+}
+
+.static-image-wrap {
+    margin: 0 -60px 40px;
+}
+
+@media (min-width: 600px) {
+    .place-block {
+        flex-direction: row;
+    }
+
+    .place-block-info {
+        max-width: 310px;
+        border-radius: 6px 0 0 6px;
+    }
+
+    .place-block-image picture, .place-block-image img {
+        border-radius: 0 6px 6px 0;
+    }
+}
+
 @media (min-width: 768px) {
+    .static-image-wrap {
+        margin: 0 -60px 80px;
+    }
+
+    .detox-wrap {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .image-sea-wrapper {
+        margin: 0 -28px 80px;
+    }
+
     .section-tip {
         display: flex;
         align-items: flex-start;
@@ -126,13 +338,7 @@ body.noWebp .main-section {
     .section-tip__icon_info {
         top: 0
     }
-}
 
-.section-lists-wrapper {
-    margin: 23px 0
-}
-
-@media (min-width: 768px) {
     .section-lists-wrapper {
         display: flex;
         flex-wrap: wrap;
@@ -143,3 +349,8 @@ body.noWebp .main-section {
         width: 368px
     }
 }
+
+.section-lists-wrapper {
+    margin: 23px 0
+}
+
