--- a/css/common.css
+++ b/css/common.css
@@ -6,11 +6,6 @@ main {
     overflow: hidden;
 }
 
-blockquote {
-    margin: 0;
-    padding: 0
-}
-
 html {
     -moz-tab-size: 4;
     tab-size: 4;
@@ -30,58 +25,17 @@ body {
     margin: 90px 0 0
 }
 
-hr {
-    height: 0;
-    color: inherit
-}
-
-abbr[title] {
-    text-decoration: underline dotted
-}
-
-b {
-    font-weight: bolder
-}
-
-small {
-    font-size: 80%
-}
-
-sub, sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline
-}
-
-sub {
-    bottom: -.25em
-}
-
-sup {
-    top: -.5em
-}
-
-table {
-    text-indent: 0;
-    border-color: inherit
-}
-
-button, input, optgroup, select, textarea {
+button {
     font-size: 100%;
     line-height: 1.15;
     margin: 0
 }
 
-input, optgroup, select, textarea {
-    font-family: inherit
-}
-
-button, select {
+button {
     text-transform: none
 }
 
-[type=button], [type=reset], [type=submit], button {
+[type=button], button {
     -webkit-appearance: button
 }
 
@@ -98,21 +52,8 @@ button, select {
     box-shadow: none
 }
 
-legend {
-    padding: 0
-}
-
-progress {
-    vertical-align: baseline
-}
-
 ::-webkit-inner-spin-button, ::-webkit-outer-spin-button {
     height: auto
-}
-
-[type=search] {
-    -webkit-appearance: textfield;
-    outline-offset: -2px
 }
 
 ::-webkit-search-decoration {
@@ -122,10 +63,6 @@ progress {
 ::-webkit-file-upload-button {
     -webkit-appearance: button;
     font: inherit
-}
-
-summary {
-    display: list-item
 }
 
 @font-face {
@@ -166,33 +103,10 @@ button {
     font-family: tuitype-light, Helvetica, sans-serif
 }
 
-body.is-open {
-    overflow: hidden
-}
-
 .list {
     list-style: none;
     margin: 0;
     padding: 0
-}
-
-.text--underline {
-    display: inline-block;
-    font-weight: 700;
-    text-decoration: underline;
-    color: #70cbf4;
-    transition: all 200ms ease-in-out;
-    cursor: pointer
-}
-
-.text--underline:focus, .text--underline:hover {
-    color: #061e46;
-    transform: scale(1.05)
-}
-
-.text--underline:visited {
-    font-weight: 700;
-    color: #061e46
 }
 
 .link {
@@ -201,7 +115,7 @@ body.is-open {
     cursor: pointer
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h6, p {
     margin: 0;
     padding: 0;
     margin-block-start: 0;
@@ -216,30 +130,6 @@ p {
 img {
     max-width: 100%;
     height: auto
-}
-
-.icon {
-    fill: currentColor
-}
-
-.visually-hidden {
-    position: absolute !important;
-    clip: rect(1px 1px 1px 1px);
-    clip: rect(1px, 1px, 1px, 1px);
-    padding: 0 !important;
-    border: 0 !important;
-    height: 1px !important;
-    width: 1px !important;
-    overflow: hidden
-}
-
-
-.lh-13 {
-    line-height: 1.3 !important
-}
-
-.lh-137 {
-    line-height: 1.37 !important
 }
 
 .bold {
@@ -265,19 +155,9 @@ img {
     font-weight: 700
 }
 
-ol, ul {
+ul {
     margin: 0;
     padding-left: 17px
-}
-
-ol {
-    margin: 0 0 28px
-}
-
-ol span, ul span {
-    padding-left: 12px;
-    display: flex;
-    font-weight: 400
 }
 
 .custom-list {
@@ -339,20 +219,7 @@ ol span, ul span {
     }
 }
 
-.section-title__inner {
-    max-width: 753px
-}
-
-.section-subtitle {
-    font-size: 18px;
-    font-weight: 700
-}
-
-.section-title--left {
-    text-align: left
-}
-
-ol, strong {
+strong {
     font-weight: 700
 }
 
@@ -400,10 +267,6 @@ ol, strong {
     margin-right: 40px
 }
 
-.nav--sticky {
-    box-shadow: 0px 3px 6px #00000040;
-}
-
 .nav-list {
     display: flex;
     align-items: center;
@@ -435,13 +298,6 @@ ol, strong {
     line-height: 1.2;
     letter-spacing: normal;
     font-weight: 400;
-}
-
-.nav-list--link svg {
-    flex-shrink: 0;
-    height: 18px;
-    width: 18px;
-    stroke: currentColor
 }
 
 .mobile-menu {
@@ -494,10 +350,6 @@ ol, strong {
     width: 71px
 }
 
-.mobile-menu.is-open {
-    transform: translateY(0)
-}
-
 .navigation__mobile-menu {
     text-align: center
 }
@@ -546,12 +398,8 @@ ol, strong {
     }
 }
 
-.hamburger.is-open:hover, .hamburger:hover {
+.hamburger:hover {
     opacity: .7
-}
-
-.hamburger.is-open .hamburger__inner, .hamburger.is-open .hamburger__inner::after, .hamburger.is-open .hamburger__inner::before {
-    background-color: #fff
 }
 
 .hamburger__box {
@@ -602,48 +450,9 @@ ol, strong {
     transition: bottom .075s .075s ease-in, transform .075s 0s cubic-bezier(.55, .055, .675, .19)
 }
 
-.hamburger__stand.is-open .hamburger__inner {
-    transform: rotate(90deg);
-    background-color: transparent !important;
-    transition: transform .075s 0s cubic-bezier(.215, .61, .355, 1), background-color 0s .15s linear
-}
-
-.hamburger__stand.is-open .hamburger__inner::before {
-    top: 0;
-    transform: rotate(-45deg);
-    transition: top .075s .1s ease-out, transform .075s .15s cubic-bezier(.215, .61, .355, 1)
-}
-
-.hamburger__stand.is-open .hamburger__inner::after {
-    bottom: 0;
-    transform: rotate(45deg);
-    transition: bottom .075s .1s ease-out, transform .075s .15s cubic-bezier(.215, .61, .355, 1)
-}
-
 .embed {
     text-align: center;
     margin-top: 30px
-}
-
-.embed-content {
-    max-width: 700px;
-    margin: 0 auto 20px;
-    text-align: left;
-    background: #e2f3fe;
-    padding: 10px 20px;
-    border-radius: 4px
-}
-
-.embed-textarea {
-    width: 100%;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    background: #fff;
-    padding: 8px 15px;
-    box-sizing: border-box;
-    font-size: 15px;
-    max-width: 100%;
-    min-height: 80px
 }
 
 .embed-button {
@@ -668,15 +477,6 @@ ol, strong {
 .embed-button:active {
     background-color: #d40e14;
     transform: translateY(2px)
-}
-
-.embed-title {
-    font-size: 14px;
-    margin-bottom: 10px
-}
-
-.hidden {
-    display: none
 }
 
 @media (max-width: 767px) {
@@ -778,25 +578,4 @@ ol, strong {
 
 .swiper-button-next img {
     transform: scale(1.1) rotate(180deg);
-}
-
-.swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
-    top: auto !important;
-    bottom: 0 !important;
-}
-
-.swiper-pagination-bullet {
-    height: 16px !important;
-    width: 16px !important;
-    background-color: #FFFFFF4D !important;
-}
-
-.swiper-pagination-bullet-active {
-    background-color: #FFFFFF !important;
-}
-
-.swiper-button-next.swiper-button-disabled, .swiper-button-prev.swiper-button-disabled {
-    opacity: 1 !important;
-    cursor: pointer !important;
-    pointer-events: auto !important;
 }
