--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@
 
 .swiper {
     width: 100%;
-    height: 756px;
+    height: 925px;
     padding-bottom: 36px !important;
 }
 
@@ -49,6 +49,7 @@
     border-radius: 10px 10px 0 0;
     height: 100%;
     object-fit: cover;
+    width: 100%;
 }
 
 .item-slider-img {
@@ -56,7 +57,7 @@
 }
 
 .item-slider-content {
-    padding: 30px 40px;
+    padding: 20px 30px;
     box-sizing: border-box;
     display: inline-block;
 }
