--- a/css/common.css
+++ b/css/common.css
@@ -400,6 +400,24 @@ strong {
     transition: bottom .075s .075s ease-in, transform .075s 0s cubic-bezier(.55, .055, .675, .19)
 }
 
+.hamburger__stand.is-open .hamburger__inner {
+    transform: rotate(90deg);
+    background-color: transparent !important;
+    transition: transform .075s 0s cubic-bezier(.215, .61, .355, 1), background-color 0s .15s linear;
+}
+
+.hamburger__stand.is-open .hamburger__inner::before {
+    top: 0;
+    transform: rotate(-45deg);
+    transition: top .075s .1s ease-out, transform .075s .15s cubic-bezier(.215, .61, .355, 1);
+}
+
+.hamburger__stand.is-open .hamburger__inner::after {
+    bottom: 0;
+    transform: rotate(45deg);
+    transition: bottom .075s .1s ease-out, transform .075s .15s cubic-bezier(.215, .61, .355, 1);
+}
+
 .embed {
     text-align: center;
     margin-top: 30px
